--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create a new bookmark</h1>
-<%= form_for @bookmark do |f| %>
-  <%= f.label :comment %>
-  <%= f.text_field :comment %>
+<h1>Add a new movie to this list</h1>
+<%= simple_form_for [@list, @bookmark] do |f| %>
+  <%= f.input :comment %>
+  <%= f.association :movie %>
   <%= f.submit %>
 <% end %>
