--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,6 @@
 <h1><%= @list.name %></h1>
+<% @bookmarks.each do |bookmark| %>
+  <%= bookmark.movie.title %>
+  <%= bookmark.comment %>
+<% end %>
+<%= link_to "Add a new movie to this list", new_list_bookmark_path(@list) %>
