--- a/app/assets/stylesheets/pages/_lists.scss
+++ b/app/assets/stylesheets/pages/_lists.scss
@@ -4,3 +4,10 @@
   background-position: top;
   background-size: cover;
 }
+
+.bookmark-card {
+  height: 200px;
+  width: 100%;
+  background-size: cover;
+  background-position: top;
+}
