--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,6 +6,7 @@
     <% @bookmarks.each do |bookmark| %>
       <div class="row justify-content-around">
         <div class="card col-12 col-lg-4 text-center m-2">
+        <p class="bookmark-card" style="background-image: url('<%= bookmark.movie.poster_url %>')"></p>
         <h3><%= bookmark.movie.title %></h3>
         <p><%= bookmark.movie.overview %></p>
         <p><i class="fas fa-quote-left p-2"></i><%= bookmark.comment %><i class="fas fa-quote-right p-2"></i></p>
