style new list and new bookmark forms

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -14,4 +14,6 @@
     <% end %>
   </div>
 </div>
-<%= link_to "Add a new movie to this list", new_list_bookmark_path(@list) %>
+<div class="text-center">
+  <%= link_to "Add a new movie to this list", new_list_bookmark_path(@list), class: "btn btn-warning" %>
+</div>
