--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-center">Save your favourite movies</h1>
 </div>
 <div class="container">
-<h3 class="m-3">My Lists</h3>
+<h3 class="m-3 text-center">My Lists</h3>
 <% if @lists.any? %>
   <div class="row justify-content-around">
     <% @lists.each do |list| %>
@@ -14,7 +14,7 @@
 <% else %>
   There are no lists!
 <% end %>
+  <div class="text-center">
+    <%= link_to "Add a new list", new_list_path, class: "btn btn-warning m-3" %>
+  </div>
 </div>
-
-
-<%= link_to "Add a new list", new_list_path %>
