changed background image for lists image to asset_url in css

--- a/app/assets/stylesheets/pages/_lists.scss
+++ b/app/assets/stylesheets/pages/_lists.scss
@@ -1,8 +1,8 @@
 .jumbotron {
   height: 400px;
-  background-image: url("lists.jpg");
   background-position: top;
   background-size: cover;
+  background-image: asset-url('lists.jpg');
 }
 
 .bookmark-card {
