--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-6 mx-auto m-3">
+  <div class="row justify-content-center">
+    <div class="col-6 m-3">
     <h1 class="text-center m-3">Add a new movie to this list</h1>
       <%= simple_form_for [@list, @bookmark] do |f| %>
         <%= f.input :comment %>
