--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Create a new list</h1>
+  <div class="row justify-content-center">
+    <div class="col-8 m-3">
+      <h1 class="text-center m-3">Create a new list</h1>
       <%= simple_form_for @list do |f| %>
         <%= f.input :name %>
         <%= f.submit %>
