--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,6 +4,7 @@
       <h1 class="text-center m-3">Create a new list</h1>
       <%= simple_form_for @list do |f| %>
         <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
         <%= f.submit %>
       <% end %>
     </div>
