--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron text-white d-flex flex-column justify-content-center">
+<div class="jumbotron text-white d-flex flex-column justify-content-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill if @list.photo.attached? %>')">
   <h1 class="text-center"><%= @list.name %></h1>
 </div>
 <div class="container">
