--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,7 @@
 <% if @lists.any? %>
   <div class="row justify-content-around">
     <% @lists.each do |list| %>
-    <div class="card col-12 col-lg-4 text-center p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill if list.photo.attached?%>')">
+    <div class="card col-12 col-lg-5 text-center m-2 p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill if list.photo.attached?%>')">
       <%= link_to list.name, list_path(list), class: "text-light" %>
     </div>
   <% end %>
