--- a/app/assets/stylesheets/pages/_lists.scss
+++ b/app/assets/stylesheets/pages/_lists.scss
@@ -20,3 +20,10 @@
   right: 0px;
   bottom: 0px;
 }
+
+.form {
+ border-radius: 10px;
+ border: 2px solid grey;
+ background-color: white;
+ box-shadow: 1px 1px 5px darkgray;
+}
