--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -15,6 +15,6 @@
   There are no lists!
 <% end %>
   <div class="text-center">
-    <%= link_to "Add a new list", new_list_path, class: "btn btn-warning m-3" %>
+    <%= link_to "Add a new list", new_list_path, class: "myButton" %>
   </div>
 </div>
