--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -17,5 +17,5 @@
   </div>
 </div>
 <div class="text-center">
-  <%= link_to "Add a new movie to this list", new_list_bookmark_path(@list), class: "btn btn-warning m-3" %>
+  <%= link_to "Add a new movie to this list", new_list_bookmark_path(@list), class: "myButton" %>
 </div>
