--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-6 m-3">
+    <div class="col-6 m-3 p-3 form">
     <h1 class="text-center m-3">Add a new movie to this list</h1>
       <%= simple_form_for [@list, @bookmark] do |f| %>
         <%= f.input :comment %>
         <%= f.association :movie %>
-        <%= f.submit %>
+        <div class="text-center">
+          <%= f.button :submit, class: "myButton" %>
+        </div>
       <% end %>        
     </div>
   </div>
